--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,6 +41,8 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+#          - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }  # IMPORTANT : Autoriser l'accès au login
+#          - { path: ^/, roles: ROLE_USER }
 
 when@test:
     security:
